--- a/source/index.html
+++ b/source/index.html
@@ -56,7 +56,29 @@
   </header>
 
   <main>
+    <h1 class="visually-hidden">Зоомагазин товаров от производителя</h1>
 
+    <section class="promo">
+      <h2 class="visually-hidden">Приветствие</h2>
+
+      <div class="promo__container">
+        <div class="promo__text">
+          <div class="promo__text-container">
+            <p class="promo__title">Зоомагазин товаров от&nbsp;производителя для ваших питомцев</p>
+            <p class="promo__subtitle">Сеть магазинов по продаже товаров для кошек и&nbsp;собак с доставкой по всей России. Поставки от производителей.</p>
+            <a href="#" class="promo__button">Перейти в каталог</a>
+          </div>
+        </div>
+        <ul class="promo__slider slider list-style-reset">
+          <li class="slider__item">
+            <h2 class="slider__title">Скидки на корм ProPlan для собак</h2>
+            <p class="slider__percent">-25%</p>
+            <p class="slider__description">При покупке корма ProPlan от 1000₽ стакан для корма в подарок!</p>
+            <a href="#" class="slider__details">Подробнее</a>
+          </li>
+        </ul>
+      </div>
+    </section>
   </main>
 
   <footer>
