--- a/source/index.html
+++ b/source/index.html
@@ -35,9 +35,9 @@
         <button class="header__burger" type="button"><span class="visually-hidden">Меню</span></button>
       </div>
       <nav class="header__nav nav header__nav--hidden">
+        <a href="#" class="nav__link">Каталог</a>
         <a href="#" class="nav__link">Акции</a>
         <a href="#" class="nav__link">Доставка и оплата</a>
-        <a href="#" class="nav__link">Каталог</a>
         <a href="#" class="nav__link">Контакты</a>
       </nav>
       <ul class="header__contacts-list contacts list-style-reset">
@@ -65,7 +65,7 @@
         <div class="promo__text">
           <div class="promo__text-container">
             <p class="promo__title">Зоомагазин товаров от&nbsp;производителя для ваших питомцев</p>
-            <p class="promo__subtitle">Сеть магазинов по продаже товаров для кошек и&nbsp;собак с доставкой по всей России. Поставки от производителей.</p>
+            <p class="promo__subtitle">Сеть магазинов по продаже товаров для домашних животных с доставкой по всей России. Поставки от производителей.</p>
             <a href="#" class="promo__button">Перейти в каталог</a>
           </div>
         </div>
