--- a/source/index.html
+++ b/source/index.html
@@ -34,12 +34,14 @@
         <a href="tel:88004598475" class="header__button header__button--call"><span class="visually-hidden">Позвонить</span></a>
         <button class="header__burger" type="button"><span class="visually-hidden">Меню</span></button>
       </div>
+
       <nav class="header__nav nav header__nav--hidden">
         <a href="#" class="nav__link">Каталог</a>
         <a href="#" class="nav__link">Акции</a>
         <a href="#" class="nav__link">Доставка и оплата</a>
         <a href="#" class="nav__link">Контакты</a>
       </nav>
+
       <ul class="header__contacts-list contacts list-style-reset">
         <li class="contacts__item contacts__item--address">
           <a href="#" class="contacts__address">
@@ -69,6 +71,7 @@
             <a href="#" class="promo__button">Перейти в каталог</a>
           </div>
         </div>
+
         <ul class="promo__slider slider list-style-reset">
           <li class="slider__item">
             <h2 class="slider__title">Скидки на корм ProPlan для собак</h2>
@@ -77,6 +80,20 @@
             <a href="#" class="slider__details">Подробнее</a>
           </li>
         </ul>
+
+        <div class="promo__slider-controls">
+          <div class="promo__slider-dots slider-dots">
+            <span class="slider-dots__dot slider-dots__dot--active"></span>
+            <span class="slider-dots__dot"></span>
+            <span class="slider-dots__dot"></span>
+            <span class="slider-dots__dot"></span>
+          </div>
+
+          <div class="promo__slider-buttons slider-buttons">
+            <button class="slider-buttons__left"></button>
+            <button class="slider-buttons__right"></button>
+          </div>
+        </div>
       </div>
     </section>
   </main>
