Advantages without dots between

--- a/source/index.html
+++ b/source/index.html
@@ -96,6 +96,26 @@
         </div>
       </div>
     </section>
+
+    <section class="advantages">
+      <h2 class="visually-hidden">Преимущества</h2>
+      <div class="advantages__container">
+        <ul class="advantages__list list-style-reset">
+          <li class="advantages__item advantages-card advantages-card--delivery">
+            <h3 class="advantages-card__title">Бесплатная доставка</h3>
+            <p class="advantages-card__description">По Москве и Московской области при&nbsp;заказе от 3000 ₽</p>
+          </li>
+          <li class="advantages__item advantages-card advantages-card--bonus">
+            <h3 class="advantages-card__title">Бонусная система</h3>
+            <p class="advantages-card__description">Получай бонусы за покупки и&nbsp;оплачивай ими часть заказа</p>
+          </li>
+          <li class="advantages__item advantages-card advantages-card--sales">
+            <h3 class="advantages-card__title">Акции и скидки</h3>
+            <p class="advantages-card__description">Акции на коллекции товаров, скидки оптовикам</p>
+          </li>
+        </ul>
+      </div>
+    </section>
   </main>
 
   <footer>
